--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#f2f2f2"
-    tools:context=".Home">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Home"
+    android:background="@color/pageColor">
 
     <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
