--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="appColor">#8692f7</color>
+    <color name="pageColor">#f2f2f2</color>
     <color name="favoriteButtonBorder">#9AFFFFFF</color>
 </resources>
