--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/pageColor"
-    tools:context=".AddRecipe">
+    tools:context=".AddRecipe"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:navGraph="@navigation/nav">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +36,6 @@
             android:layout_marginTop="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/upload_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -51,6 +52,7 @@
             android:gravity="start|center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_name"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="text"
@@ -59,7 +61,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/upload_ingredients"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -76,6 +77,7 @@
             android:gravity="start|center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_ingredients"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="text"
@@ -84,7 +86,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/upload_category"
+            android:id="@+id/categoryTextInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -101,6 +103,7 @@
             android:gravity="start|center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_category"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="text"
@@ -109,7 +112,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/upload_time"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -126,6 +128,7 @@
             android:gravity="start|center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_time"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="time"
@@ -134,7 +137,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/upload_description"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -151,6 +153,7 @@
             android:gravity="start|center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/upload_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/appColor"/>
@@ -158,6 +161,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/addRecipeToFirebase"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
