--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -25,17 +25,19 @@
             android:textColor="@color/appColor"
             android:text="Upload Recipe"/>
 
-        <ImageView
-            android:id="@+id/upload_image"
-            android:layout_width="250dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:src="@drawable/add_image"
-            android:scaleType="center"
-            android:background="@drawable/app_border"
-            android:layout_marginTop="10dp"/>
+		<ImageView
+			android:id="@+id/upload_image"
+			android:layout_width="250dp"
+			android:layout_height="150dp"
+			android:layout_gravity="center"
+			android:src="@drawable/add_image"
+			android:scaleType="center"
+			android:background="@drawable/app_border"
+			android:layout_marginTop="10dp"
+			android:clickable="true"
+			android:focusable="true"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutName"
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
@@ -44,9 +46,13 @@
 			android:layout_marginTop="16dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Recipe Name"
-			android:textColorHint="@color/appColor"
 			android:textColor="@color/appColor"
-			app:errorEnabled="true">
+			android:textColorHint="@color/appColor"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/textView"
+			android:gravity="start|center_vertical">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_name"
