--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -39,22 +39,34 @@
                     android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="5dp"
+                    android:layout_marginEnd="4dp"
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/button_border"
                     android:src="@drawable/baseline_white_favorite_border_24" />
 
                 <ImageButton
-                    android:id="@+id/deleteBtn"
+                    android:id="@+id/editBtn"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_toStartOf="@id/favoriteBtn"
                     android:layout_alignTop="@id/favoriteBtn"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/button_border"
+                    android:src="@drawable/baseline_edit" />
+
+                <ImageButton
+                    android:id="@+id/deleteBtn"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_toStartOf="@id/editBtn"
+                    android:layout_alignTop="@id/editBtn"
                     android:background="@drawable/button_border"
                     android:src="@drawable/baseline_clear_24" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
 
 
 
