--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,79 +7,82 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/pagebkg"
+    android:background="@drawable/pagebkg_login_signup"
     tools:context=".SignUpFragment">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="470dp"
         android:layout_margin="30dp"
+        app:cardBackgroundColor="#00000000"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_width="259dp"
+            android:layout_height="528dp"
             android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
             android:padding="24dp"
-            android:background="@drawable/custom_edittext">
+            android:layout_marginTop="30dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
-                android:textSize="36sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/appColor"/>
+                android:textColor="@color/appColor"
+                android:textSize="36sp"
+                android:textStyle="bold" />
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
                 android:id="@+id/signup_email"
-                android:background="@drawable/custom_edittext"
+                android:layout_width="198dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="40dp"
-                android:padding="8dp"
-                android:hint="Email"
+                android:layout_marginRight="7dp"
+                android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
-                android:textColor="@color/black"
-                android:inputType="text|textNoSuggestions"/>
+                android:hint="Email"
+                android:inputType="text|textNoSuggestions"
+                android:padding="8dp"
+                android:textColor="@color/black" />
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
                 android:id="@+id/signup_password"
-                android:background="@drawable/custom_edittext"
+                android:layout_width="198dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="20dp"
-                android:padding="8dp"
-                android:hint="Password"
+                android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:textColor="@color/black"
-                android:inputType="textPassword"/>
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="Sign Up"
                 android:id="@+id/signup_button"
-                android:textSize="18sp"
+                android:layout_width="132dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/appColor"
-                app:cornerRadius = "20dp"/>
+                android:text="Sign Up"
+                android:textSize="18sp"
+                app:cornerRadius="20dp" />
 
             <TextView
+                android:id="@+id/loginRedirectText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/loginRedirectText"
-                android:text="Already an user? Login"
                 android:layout_gravity="center"
-                android:padding="8dp"
                 android:layout_marginTop="10dp"
+                android:padding="8dp"
+                android:text="Already an user? Login"
                 android:textColor="@color/appColor"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
