--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -1,49 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/pageColor"
-    tools:context=".AddRecipe"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:background="@drawable/pagebkg_login_signup"
+	tools:context=".AddRecipe"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:navGraph="@navigation/nav">
 
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_margin="25dp"
-        android:gravity="center"
+        android:layout_margin="80dp"
+		android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+			android:layout_marginTop="75dp"
+			android:gravity="center"
+			android:layout_marginRight="8dp"
             android:textStyle="bold"
             android:textSize="30sp"
             android:textColor="@color/appColor"
-            android:text="Upload Recipe"/>
+			android:text="Upload Recipe"/>
 
 		<ImageView
 			android:id="@+id/upload_image"
-			android:layout_width="250dp"
-			android:layout_height="150dp"
+			android:layout_width="51dp"
+			android:layout_height="43dp"
 			android:layout_gravity="center"
-			android:src="@drawable/add_image"
-			android:scaleType="center"
-			android:background="@drawable/app_border"
-			android:layout_marginTop="10dp"
+			android:layout_marginTop="7dp"
+			android:layout_marginRight="10dp"
+			android:adjustViewBounds="true"
 			android:clickable="true"
-			android:focusable="true"/>
+			android:focusable="true"
+			android:scaleType="fitCenter"
+			android:src="@drawable/add_image" />
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutName"
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="10dp"
-			android:layout_marginTop="16dp"
+			android:layout_marginStart="40dp"
+			android:layout_marginTop="8dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Recipe Name"
 			android:textColor="@color/appColor"
@@ -56,8 +61,9 @@
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_name"
-				android:layout_width="match_parent"
+				android:layout_width="220dp"
 				android:layout_height="50dp"
+				android:paddingStart="30dp"
 				android:inputType="text"
 				android:textColor="@color/appColor" />
 
@@ -68,8 +74,8 @@
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="10dp"
-			android:layout_marginTop="16dp"
+			android:layout_marginStart="40dp"
+			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Recipe Ingredients"
 			android:textColorHint="@color/appColor"
@@ -82,8 +88,9 @@
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_ingredients"
-				android:layout_width="match_parent"
+				android:layout_width="220dp"
 				android:layout_height="50dp"
+				android:paddingStart="30dp"
 				android:inputType="text"
 				android:textColor="@color/appColor" />
 
@@ -95,8 +102,8 @@
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="10dp"
-			android:layout_marginTop="16dp"
+			android:layout_marginStart="40dp"
+			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Recipe Category"
 			android:textColorHint="@color/appColor"
@@ -109,8 +116,9 @@
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_category"
-				android:layout_width="match_parent"
+				android:layout_width="220dp"
 				android:layout_height="50dp"
+				android:paddingStart="30dp"
 				android:inputType="text"
 				android:textColor="@color/appColor" />
 
@@ -121,8 +129,8 @@
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="10dp"
-			android:layout_marginTop="16dp"
+			android:layout_marginStart="40dp"
+			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Preparation time"
 			android:textColorHint="@color/appColor"
@@ -135,8 +143,9 @@
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_time"
-				android:layout_width="match_parent"
+				android:layout_width="220dp"
 				android:layout_height="50dp"
+				android:paddingStart="30dp"
 				android:inputType="time"
 				android:textColor="@color/appColor" />
 
@@ -147,8 +156,8 @@
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="10dp"
-			android:layout_marginTop="16dp"
+			android:layout_marginStart="40dp"
+			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
 			android:hint="Recipe Description"
 			android:textColorHint="@color/appColor"
@@ -161,18 +170,20 @@
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_description"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
+				android:layout_width="220dp"
+				android:layout_height="50dp"
+				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/addRecipeToFirebase"
-            android:layout_width="300dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="10dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginBottom="30dp"
             android:text="ADD"
             android:textSize="20dp"/>
 
