Change the home page style.

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -80,7 +80,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:padding="8dp"
-                android:text="Already an user? Login"
+                android:text="Already a user? Login"
                 android:textColor="@color/appColor"
                 android:textSize="18sp" />
 
