--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,12 +8,66 @@
     app:navGraph="@navigation/nav"
     tools:context=".Home"
     android:background="@color/pageColor">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="85dp"
+        android:background="#BF150E0E" />
+
+    <RelativeLayout
+        android:id="@+id/titleBar"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:background="@color/pageColor">
+
+        <ImageView
+            android:id="@+id/titleImage"
+            android:layout_width="80dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="0dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/winning_recipe_logo" />
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Winning Recipe"
+        android:textColor="#BF150E0E"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginStart="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+        </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="0dp"
+        />
+
+    <TextView
+        android:id="@+id/userEmailTextView"
+        android:layout_width="match_parent"
+        android:layout_height="17dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="89dp"
+        android:text="User "
+        android:textSize="13sp"
+        android:textStyle="italic"
+        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawablePadding="0dp"/>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="109dp"
         android:layout_marginEnd="12dp"
         android:background="@drawable/app_border"
         android:focusable="false"
