--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_home_to_updateRecipe"
             app:destination="@id/updateRecipe" />
+        <action
+            android:id="@+id/action_home_to_login"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/addRecipe"
